# LoL_Best_Matchup

./: .gitignore  README.md  analysis.py  global_logger.py  main.bat  main.py  parse_lolalytics.py  pyproject.toml  update.bat  update.py  util.py  web_scraping.py
lol_best_pick/: analysis.py  global_logger.py  main.py  parse_lolalytics.py  util.py  web_scraping.py
lol_best_pick/configs/: champ_pool_config_template.yml  config_picker.yml  current_pool.yml
