[tool.poetry]
name = "lol_best_pick"
version = "0.1.0"
description = "Based on the champions picked already in your lobby, find the best champion choice within your champion pool."
authors = ["Jared Hawley <j.yelwah@gmail.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.18.1"
bs4 = "^0.0.2"
types-beautifulsoup4 = "^4.12.0.20240106"
pandas = "^2.2.1"
pandas-stubs = "^2.2.0.240218"
webdriver-manager = "^4.0.1"
pyyaml = "^6.0.1"
types-pyyaml = "^6.0.12.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
mypy = "^1.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
  "*.toml"
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.mypy]
disallow_incomplete_defs = true
install_types = true
non_interactive = true
pretty = true

[tool.isort]
line_length=80
profile = "hug"
